destionation_subset_based_argorollouts_canary_deployments/argo_rollouts_services_analysis_canary_deployment.yaml
---

apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: auth-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: sreedocker123/cafemicroserviceauth:latest
          ports:
            - containerPort: 3000
  strategy:
    canary:
      stableService: auth-service-stable
      canaryService: auth-service-preview
      trafficRouting:
        istio:
          virtualService:
            name: auth-service
            routes:
              - http
          destinationRule:
            name: auth-service
            canarySubsetName: preview
            stableSubsetName: stable
      steps:
        - setWeight: 20
        - pause: { duration: 30s }
        - setWeight: 50
        - pause: { duration: 30s }
        - analysis:
            templates:
              - templateName: rollout-analysis
            args:
              - name: service-name
                value: auth-service-preview

---

apiVersion: v1
kind: Service
metadata:
  name: auth-service-stable
  namespace: default
spec:
  selector:
    app: auth-service
    rollouts-pod-template-hash: placeholder-stable
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service-preview
  namespace: default
spec:
  selector:
    app: auth-service
    rollouts-pod-template-hash: placeholder-preview
  ports:
    - port: 3000
      targetPort: 3000

---

apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: products-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-service
  template:
    metadata:
      labels:
        app: products-service
    spec:
      containers:
        - name: products-service
          image: sreedocker123/cafemicroserviceproducts:latest
          ports:
            - containerPort: 3001
  strategy:
    canary:
      stableService: products-service-stable
      canaryService: products-service-preview
      trafficRouting:
        istio:
          virtualService:
            name: products-service
            routes:
              - http
          destinationRule:
            name: products-service
            canarySubsetName: preview
            stableSubsetName: stable
      steps:
        - setWeight: 20
        - pause: { duration: 30s }
        - setWeight: 50
        - pause: { duration: 30s }
        - analysis:
            templates:
              - templateName: rollout-analysis
            args:
              - name: service-name
                value: products-service-preview


---

apiVersion: v1
kind: Service
metadata:
  name: products-service-stable
  namespace: default
spec:
  selector:
    app: products-service
    rollouts-pod-template-hash: placeholder-stable
  ports:
    - port: 3001
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: products-service-preview
  namespace: default
spec:
  selector:
    app: products-service
    rollouts-pod-template-hash: placeholder-preview
  ports:
    - port: 3001
      targetPort: 3001

---

apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: cart-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
    spec:
      containers:
        - name: cart-service
          image: sreedocker123/cafemicroservicecart:latest
          ports:
            - containerPort: 3002
  strategy:
    canary:
      stableService: cart-service-stable
      canaryService: cart-service-preview
      trafficRouting:
        istio:
          virtualService:
            name: cart-service
            routes:
              - http
          destinationRule:
            name: cart-service
            stableSubsetName: stable
            canarySubsetName: preview
      steps:
        - setWeight: 20
        - pause: { duration: 30s }
        - setWeight: 50
        - pause: { duration: 30s }
        - analysis:
            templates:
              - templateName: rollout-analysis
            args:
              - name: service-name
                value: cart-service-preview

---

apiVersion: v1
kind: Service
metadata:
  name: cart-service-stable
  namespace: default
spec:
  selector:
    app: cart-service
    rollouts-pod-template-hash: placeholder-stable
  ports:
    - port: 3002
      targetPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service-preview
  namespace: default
spec:
  selector:
    app: cart-service
    rollouts-pod-template-hash: placeholder-preview
  ports:
    - port: 3002
      targetPort: 3002


---

apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: orders-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-service
  template:
    metadata:
      labels:
        app: orders-service
    spec:
      containers:
        - name: orders-service
          image: sreedocker123/cafemicroserviceorders:latest
          ports:
            - containerPort: 3003
  strategy:
    canary:
      stableService: orders-service-stable
      canaryService: orders-service-preview
      trafficRouting:
        istio:
          virtualService:
            name: orders-service
            routes:
              - http
          destinationRule:
            name: orders-service
            stableSubsetName: stable
            canarySubsetName: preview
      steps:
        - setWeight: 20
        - pause: { duration: 30s }
        - setWeight: 50
        - pause: { duration: 30s }
        - analysis:
            templates:
              - templateName: rollout-analysis
            args:
              - name: service-name
                value: orders-service-preview


---

apiVersion: v1
kind: Service
metadata:
  name: orders-service-stable
  namespace: default
spec:
  selector:
    app: orders-service
    rollouts-pod-template-hash: placeholder-stable
  ports:
    - port: 3003
      targetPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service-preview
  namespace: default
spec:
  selector:
    app: orders-service
    rollouts-pod-template-hash: placeholder-preview
  ports:
    - port: 3003
      targetPort: 3003


---

apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: api-gateway
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: sreedocker123/cafemicroserviceapigateway:latest
          ports:
            - containerPort: 8000
  strategy:
    canary:
      stableService: api-gateway-stable
      canaryService: api-gateway-preview
      trafficRouting:
        istio:
          virtualService:
            name: api-gateway
            routes:
              - http
          destinationRule:
            name: api-gateway
            stableSubsetName: stable
            canarySubsetName: preview
      steps:
        - setWeight: 20
        - pause: { duration: 30s }
        - setWeight: 50
        - pause: { duration: 30s }
        - analysis:
            templates:
              - templateName: rollout-analysis
            args:
              - name: service-name
                value: api-gateway-preview


---

apiVersion: v1
kind: Service
metadata:
  name: api-gateway-stable
  namespace: default
spec:
  selector:
    app: api-gateway
    rollouts-pod-template-hash: placeholder-stable
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-preview
  namespace: default
spec:
  selector:
    app: api-gateway
    rollouts-pod-template-hash: placeholder-preview
  ports:
    - port: 8000
      targetPort: 8000

---

apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: sreedocker123/cafemicroservicefrontend:canary2
          ports:
            - containerPort: 80
  strategy:
    canary:
      stableService: frontend-stable
      canaryService: frontend-preview
      trafficRouting:
        istio:
          virtualService:
            name: frontend
            routes:
              - http
          destinationRule:
            name: frontend
            stableSubsetName: stable
            canarySubsetName: preview
      steps:
        - setWeight: 20
        - pause: { duration: 30s }
        - setWeight: 50
        - pause: { duration: 30s }
        - analysis:
            templates:
              - templateName: rollout-analysis
            args:
              - name: service-name
                value: frontend-preview


---

apiVersion: v1
kind: Service
metadata:
  name: frontend-stable
  namespace: default
spec:
  selector:
    app: frontend
    rollouts-pod-template-hash: placeholder-stable
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-preview
  namespace: default
spec:
  selector:
    app: frontend
    rollouts-pod-template-hash: placeholder-preview
  ports:
    - port: 80
      targetPort: 80
